--- a/index.html
+++ b/index.html
@@ -6,56 +6,69 @@
     <title>MisterG - App-Entwickler</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Segoe UI", Arial, sans-serif;
             margin: 0;
             padding: 0;
-            color: #00FFFF; /* Cyan */
-            background: url('fuchs-logo.png') no-repeat center center fixed;
-            background-size: 150px;
+            color: #E0E0E0;
+            background-color: #0d0d0d;
+            background: radial-gradient(circle at top, #1a1a1a 0%, #000000 80%);
         }
         .overlay {
-            background: rgba(255, 0, 255, 0.05); /* Magenta sehr transparent */
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: 40px 20px;
+            text-align: center;
         }
         h1 {
-            color: #FF00FF; /* Magenta */
-            margin-bottom: 10px;
+            color: #00eaff;
+            text-shadow: 0 0 15px #00eaff;
+            margin-bottom: 15px;
+            font-size: 2.2em;
         }
         p {
             max-width: 600px;
-            text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             line-height: 1.6;
-            color: #00FFFF; /* Cyan */
+            color: #cfcfcf;
         }
         a.button {
             display: inline-block;
-            padding: 10px 20px;
+            padding: 12px 24px;
             margin: 10px;
-            background: linear-gradient(45deg, #00FFFF, #FF00FF);
-            color: white;
+            background: linear-gradient(90deg, #00eaff, #ff00ff);
+            color: #fff;
             text-decoration: none;
-            border-radius: 5px;
-            transition: transform 0.3s;
+            border-radius: 8px;
+            font-weight: bold;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 12px rgba(0, 234, 255, 0.4);
         }
         a.button:hover {
-            transform: scale(1.1);
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 0 18px rgba(255, 0, 255, 0.7);
+        }
+        footer {
+            position: absolute;
+            bottom: 15px;
+            width: 100%;
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
         }
     </style>
 </head>
 <body>
     <div class="overlay">
-        <h1>MisterG - App-Entwickler</h1>
-        <p>Ich entwickle unterhaltsame Apps, die Spaß machen und spannende Features bieten. Schau dich um und entdecke meine Projekte!</p>
+        <h1>MisterG – App-Entwickler</h1>
+        <p>Ich entwickle unterhaltsame Apps mit spannenden Ideen und klarer Vision. Schau dich um und entdecke meine Projekte!</p>
         <div>
-            <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Caard-Seite</a>
-            <a class="button" href="Datenschutzerklärung_für_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
+            <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
+            <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
         </div>
     </div>
+    <footer>© 2025 MisterG</footer>
 </body>
 </html>
