--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 </head>
 <body>
     <div class="overlay">
-        <h1>MisterG – App-Entwickler</h1>
+        <h1>Mister G – App-Entwickler</h1>
         <p>Ich entwickle unterhaltsame Apps mit spannenden Ideen und klarer Vision. Schau dich um und entdecke meine Projekte!</p>
+        <p>Nützliche Ideen, rund ums Dating! Und manchmal auch kleine Spiele!</p>
         <div>
             <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
             <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
