--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
         <div>
             <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
             <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
+            <!-- Social-Media Buttons -->
+            <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
+            <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
+            <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
+            <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>            
         </div>
     </div>
     <footer>© 2025 MisterG</footer>
