--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
             background: radial-gradient(circle at top, #1a1a1a 0%, #000000 80%);
         }
 
-        /* Logo oben rechts */
         .top-logo {
             position: fixed;
             top: 30px;
             right: 30px;
-            width: 150px;        /* Größe anpassen */
+            width: 150px;
             height: auto;
             z-index: 1000;
-            filter: drop-shadow(0 0 10px #00eaff); /* leichter Glow */
+            filter: drop-shadow(0 0 10px #00eaff);
             transition: transform 0.3s;
         }
 
         .top-logo:hover {
-            transform: scale(1.1); /* kleines Hover-Feedback */
+            transform: scale(1.1);
         }
 
         .overlay {
@@ -83,7 +82,6 @@
     </style>
 </head>
 <body>
-    <!-- Logo oben rechts -->
     <img src="fuchs-logo.png" alt="Logo" class="top-logo">
 
     <div class="overlay">
@@ -91,13 +89,18 @@
         <p>Ich entwickle unterhaltsame Apps mit spannenden Ideen und klarer Vision. Schau dich um und entdecke meine Projekte!</p>
         <p>Nützliche Ideen, rund ums Dating! Und manchmal auch kleine Spiele!</p>
         <div>
+            <!-- Neuer Button über den bestehenden Buttons -->
+            <a class="button" href="https://tally.so/r/2E8OJV" target="_blank">Chars für DSA</a>
+
+            <!-- Bestehende Buttons -->
             <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
-            <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
-            <!-- Social-Media Buttons -->
             <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
             <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
             <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
-            <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>            
+            <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+
+            <!-- Impressum-Button unter den anderen -->
+            <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" target="_blank">Impressum</a>
         </div>
     </div>
     <footer>© 2025 MisterG</footer>
