--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 
     <div class="overlay">
         <h1>Mister G – App-Entwickler</h1>
-        <p>Ich entwickle unterhaltsame Apps mit spannenden Ideen und klarer Vision. Schau dich um und entdecke meine Projekte!</p>
-        <p>Nützliche Ideen, rund ums Dating! Und manchmal auch kleine Spiele!</p>
+        <p>Ich entwickle kreative Apps und Spiele mit spannenden Ideen. Entdecke hier meine Projekte und nützliche Tools!</p>
+        <p>Von Dating-Helfern bis zu kleinen Games – schau dich um!</p>
+
         <div>
             <!-- Neuer Button über den bestehenden Buttons -->
             <a class="button" href="https://tally.so/r/2E8OJV" target="_blank">Chars für DSA</a>
