--- a/index.html
+++ b/index.html
@@ -85,35 +85,43 @@
     <img src="fuchs-logo.png" alt="Logo" class="top-logo">
 
     <div class="overlay">
-        <h1>Mister G – App-Entwickler</h1>
-        <p>Ich entwickle kreative Apps und Spiele mit spannenden Ideen. Entdecke hier meine Projekte und nützliche Tools!</p>
-        <p>Von Dating-Helfern bis zu kleinen Games – schau dich um!</p>
+    <h1>Mister G – App-Entwickler</h1>
+    <p>Ich entwickle kreative Apps und Spiele mit spannenden Ideen. Entdecke hier meine Projekte und nützliche Tools!</p>
+    <p>Von Dating-Helfern bis zu kleinen Games – schau dich um!</p>
 
-        <div>
-    <!-- Auffälliger Button für DSA -->
-    <a class="button" href="https://tally.so/r/2E8OJV" target="_blank" style="
-        font-size: 1.3em;
-        padding: 16px 32px;
-        background: linear-gradient(90deg, #ff0080, #ffed00);
-        color: #000;
-        box-shadow: 0 0 20px rgba(255, 0, 128, 0.7);
-        margin-bottom: 20px;
-        display: inline-block;
-    ">Chars für DSA</a>
+    <!-- DSA Button -->
+    <div style="margin-bottom: 30px;">
+        <a class="button" href="https://tally.so/r/2E8OJV" target="_blank" style="
+            font-size: 1.3em;
+            padding: 16px 32px;
+            background: linear-gradient(90deg, #ff0080, #ffed00);
+            color: #000;
+            box-shadow: 0 0 20px rgba(255, 0, 128, 0.7);
+            display: inline-block;
+        ">Chars für DSA</a>
+    </div>
 
-    <!-- Andere Buttons -->
-    <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
-    <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
-    <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
-    <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
-    <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
-    <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+    <!-- Andere Buttons in einer Reihe -->
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 30px;">
+        <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
+        <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
+        <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
+        <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
+        <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
+        <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+    </div>
 
-    <!-- Impressum eine Reihe tiefer -->
-    <div style="margin-top: 20px;">
-        <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" target="_blank" style="font-size: 0.9em; background: #444; color: #fff; box-shadow: none;">Impressum</a>
+    <!-- Impressum Button -->
+    <div>
+        <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" target="_blank" style="
+            font-size: 0.9em;
+            background: #444;
+            color: #fff;
+            box-shadow: none;
+        ">Impressum</a>
     </div>
 </div>
+
     </div>
     <footer>© 2025 MisterG</footer>
 </body>
