--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
     <!-- Andere Buttons in einer Reihe -->
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 30px;">
-         <a class="button" href="https://play.google.com/store/apps/dev?id=5394028000260806774&hl=de" target="_blank">Play Store</a>
-        <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Meine Carrd-Seite</a>
-        <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
+        <a class="button" href="https://play.google.com/store/apps/dev?id=5394028000260806774&hl=de" target="_blank">Play Store</a>     
         <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
         <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
         <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
+        <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Project: Lost Soldier</a>
         <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+        <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
     </div>
 
     <!-- Impressum Button -->
