--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
         <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
         <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Project: Lost Soldier</a>
         <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+        <a class="button" href="https://misterg-blip.github.io/runners/" target="_blank">Runner Game</a>
         <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
     </div>
 
