--- a/portal.html
+++ b/portal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mister G – Spieleportal</title>
+    <title>Mister G – Games</title>
     <style>
         body {
             font-family: "Segoe UI", Arial, sans-serif;
@@ -96,21 +96,20 @@
     <img src="fuchs-logo.png" alt="Logo" class="top-logo">
 
     <div class="overlay">
-        <h1>Mister G – Spieleportal</h1>
-        <p>Wähle ein Spiel aus und starte direkt im Browser. Neue Spiele erscheinen hier automatisch.</p>
+        <h1>Mister G – Games</h1>
+        <p>Wähle ein Spiel aus und starte direkt im Browser. Neue Spiele --- Work in Progress.</p>
 
         <div class="game-grid">
-            <a class="button" href="./runners/index.html" target="_blank">Runner</a>
-            <a class="button" href="./lost-soldier-foxhunt/index.html" target="_blank">Lost Soldier: Foxhunt</a>
+            <a class="button" href="./runners/index.html" target="_blank">Runner</a>          
             <!-- Weitere Spiele hier hinzufügen -->
         </div>
 
-        <div class="game-grid">
-            <a class="button" href="https://tally.so/r/2E8OJV" target="_blank">Support / Feedback</a>
-            <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutz</a>
-        </div>
+        <div class="footer-links">
+            <a class="button" href="https://tally.so/r/2E8OJV" target="_blank">Support?</a>
+            <a class="button" href="https://misterg-blip.github.io/">Zurück</a>
+        </div>        
     </div>
 
-    <footer>© 2025 MisterG</footer>
+    <footer>© 2026 MisterG</footer>
 </body>
 </html>
