--- a/portal.html
+++ b/portal.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="footer-links">
-            <a class="button" href="https://tally.so/r/2E8OJV" target="_blank">Support?</a>
+            <a class="button" href="https://misterg-blip.github.io/support">Support? Bisschen Werbung</a>
             <a class="button" href="https://misterg-blip.github.io/">Zurück</a>
         </div>        
     </div>
