--- a/portal.html
+++ b/portal.html
@@ -106,7 +106,7 @@
 
         <div class="footer-links">
             <a class="button" href="https://misterg-blip.github.io/support">Support? Bisschen Werbung</a>
-            <a class="button" href="https://misterg-blip.github.io/">Zurück</a>
+            <a class="button" href="https://misterg-blip.github.io/">Home</a>
         </div>        
     </div>
 
