--- a/support.html
+++ b/support.html
@@ -84,6 +84,10 @@
         <a class="button disabled" href="#">Affiliate (irgendwann verfügbar)</a>
     </div>
 
+    <div class="footer-links">
+        <a class="button" href="https://misterg-blip.github.io/">Home</a>
+    </div> 
+
     <footer>© 2025 MisterG</footer>
 </body>
 </html>
