--- a/portal.html
+++ b/portal.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="footer-links">
-            <a class="button" href="https://misterg-blip.github.io/support">Support? Bisschen Werbung</a>
+            <a class="button" href="https://misterg-blip.github.io/support">Want to support me?</a>
             <a class="button" href="https://misterg-blip.github.io/">Home</a>
         </div>        
     </div>
