--- a/index.html
+++ b/index.html
@@ -109,13 +109,19 @@
         <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
         <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Project: Lost Soldier</a>
         <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
-        <a class="button" href="https://misterg-blip.github.io/runners/" target="_blank">Browser Games</a>
+        <a class="button" href="https://misterg-blip.github.io/portal.html">Browser Games</a>
         <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
     </div>
 
     <!-- Impressum Button -->
     <div>
-        <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" target="_blank" style="
+        <a class="button" href="https://misterg-blip.github.io/support" style="
+            font-size: 0.9em;
+            background: #444;
+            color: #fff;
+            box-shadow: none;"
+        >Want to support me?</a>
+        <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" style="
             font-size: 0.9em;
             background: #444;
             color: #fff;
