--- a/support.html
+++ b/support.html
@@ -80,7 +80,7 @@
 
     <div class="button-container">
         <a class="button" href="https://www.paypal.com/donate?hosted_button_id=DEINE_ID" target="_blank">Donations</a>
-        <a class="button" href="https://deine-werbung-seite.com" target="_blank">Werbung gucken</a>
+        <a class="button" href="https://misterg-blip.github.io/advertising.html" target="_blank">Werbung gucken</a>
         <a class="button disabled" href="#">Affiliate (irgendwann verfügbar)</a>
     </div>
 
