--- a/advertising.html
+++ b/advertising.html
@@ -83,8 +83,8 @@
     </style>
 
     <!-- Google AdSense Script -->
-    <script data-ad-client="ca-pub-DEINE-ID-HIER" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6986888920954018"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <img src="fuchs-logo.png" alt="Logo" class="top-logo">
