--- a/advertising.html
+++ b/advertising.html
@@ -91,7 +91,7 @@
 
     <div class="overlay">
         <h1>Unterstütze Mister G</h1>
-        <p>Hier kannst du durch freiwilliges Klicken oder Anzeigen das Projekt unterstützen.</p>
+        <p>Danke, dass du hier wild auf Links klickst oder Anzeigen ansiehst – lass die großen Firmen zahlen, so unterstüzt du mich!</p>
 
         <!-- Beispiel Ads -->
         <div class="ads-section">
