--- a/index.html
+++ b/index.html
@@ -1,136 +1,151 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mister G - App-Entwickler</title>
-    <style>
-        body {
-            font-family: "Segoe UI", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #E0E0E0;
-            background-color: #0d0d0d;
-            background: radial-gradient(circle at top, #1a1a1a 0%, #000000 80%);
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mister G - App-Entwickler</title>
+<style>
+    body {
+        font-family: "Segoe UI", Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        color: #E0E0E0;
+        background: radial-gradient(circle at top, #1a1a1a 0%, #000000 80%);
+    }
 
-        .top-logo {
-            position: fixed;
-            top: 30px;
-            right: 30px;
-            width: 150px;
-            height: auto;
-            z-index: 1000;
-            filter: drop-shadow(0 0 10px #00eaff);
-            transition: transform 0.3s;
-        }
+    .top-logo {
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        width: 150px;
+        height: auto;
+        z-index: 1000;
+        filter: drop-shadow(0 0 10px #00eaff);
+        transition: transform 0.3s;
+    }
 
-        .top-logo:hover {
-            transform: scale(1.1);
-        }
+    .top-logo:hover {
+        transform: scale(1.1);
+    }
 
-        .overlay {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 40px 20px;
-            text-align: center;
-        }
+    .overlay {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 40px 20px;
+        text-align: center;
+    }
 
-        h1 {
-            color: #00eaff;
-            text-shadow: 0 0 15px #00eaff;
-            margin-bottom: 15px;
-            font-size: 2.2em;
-        }
+    h1 {
+        color: #00eaff;
+        text-shadow: 0 0 15px #00eaff;
+        margin-bottom: 15px;
+        font-size: 2.2em;
+    }
 
-        p {
-            max-width: 600px;
-            margin-bottom: 30px;
-            line-height: 1.6;
-            color: #cfcfcf;
-        }
+    p {
+        max-width: 600px;
+        margin-bottom: 30px;
+        line-height: 1.6;
+        color: #cfcfcf;
+    }
 
-        a.button {
-            display: inline-block;
-            padding: 12px 24px;
-            margin: 10px;
-            background: linear-gradient(90deg, #00eaff, #ff00ff);
-            color: #fff;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 12px rgba(0, 234, 255, 0.4);
-        }
+    /* Standard Button */
+    a.button {
+        display: inline-block;
+        padding: 12px 24px;
+        margin: 10px;
+        background: linear-gradient(90deg, #00eaff, #ff00ff);
+        color: #fff;
+        text-decoration: none;
+        border-radius: 8px;
+        font-weight: bold;
+        transition: all 0.3s ease;
+        box-shadow: 0 0 12px rgba(0, 234, 255, 0.4);
+    }
 
-        a.button:hover {
-            transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 0 18px rgba(255, 0, 255, 0.7);
-        }
+    a.button:hover {
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 0 18px rgba(255, 0, 255, 0.7);
+    }
 
-        footer {
-            position: absolute;
-            bottom: 15px;
-            width: 100%;
-            text-align: center;
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+    /* Top Projekt Button */
+    .highlight-button {
+        font-size: 1.3em;
+        padding: 16px 32px;
+        background: linear-gradient(90deg, #ff0080, #ffed00);
+        color: #000;
+        box-shadow: 0 0 20px rgba(255, 0, 128, 0.7);
+    }
+
+    /* Rechtliches / Footer Buttons */
+    .legal-button {
+        font-size: 0.9em;
+        background: #444;
+        color: #fff;
+        box-shadow: none;
+    }
+
+    /* Footer sticky */
+    footer {
+        position: sticky;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        font-size: 0.9em;
+        color: #666;
+        padding: 10px 0;
+        background-color: rgba(0,0,0,0.7);
+    }
+
+    /* Button-Reihen */
+    .button-row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 30px;
+    }
+</style>
 </head>
 <body>
     <img src="fuchs-logo.png" alt="Logo" class="top-logo">
 
     <div class="overlay">
-    <h1>Mister G – App-Entwickler</h1>
-    <p>Ich entwickle kreative Apps und Spiele mit spannenden Ideen. Entdecke hier meine Projekte und nützliche Tools!</p>
-    <p>Von Dating-Helfern bis zu kleinen Games – schau dich um!</p>
+        <h1>Mister G – App-Entwickler</h1>
+        <p>Ich entwickle kreative Apps und Spiele mit spannenden Ideen. Entdecke hier meine Projekte und nützliche Tools!</p>
+        <p>Von Dating-Helfern bis zu kleinen Games – schau dich um!</p>
 
-    <!-- DSA Button -->
-    <div style="margin-bottom: 30px;">
-        <a class="button" href="https://tally.so/r/2E8OJV" target="_blank" style="
-            font-size: 1.3em;
-            padding: 16px 32px;
-            background: linear-gradient(90deg, #ff0080, #ffed00);
-            color: #000;
-            box-shadow: 0 0 20px rgba(255, 0, 128, 0.7);
-            display: inline-block;
-        ">Chars für DSA</a>
+        <!-- Top Projekt -->
+        <div class="button-row">
+            <a class="button highlight-button" href="https://tally.so/r/2E8OJV" target="_blank">Chars für DSA</a>
+        </div>
+
+        <!-- Social Media -->
+        <div class="button-row">
+            <a class="button" href="https://play.google.com/store/apps/dev?id=5394028000260806774&hl=de" target="_blank">Play Store</a>     
+            <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
+            <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
+            <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>        
+        </div>
+
+        <!-- Games / Portale -->
+        <div class="button-row">
+            <a class="button" href="https://misterg-blip.github.io/portal.html">Lost Soldier Universe</a>
+            <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+            <a class="button" href="https://misterg-blip.github.io/portal.html">Browser Games</a>
+        </div>
+
+        <!-- Footer Buttons / Rechtliches -->
+        <div class="button-row">
+            <a class="button legal-button" href="https://misterg-blip.github.io/support">Want to support me?</a>
+            <a class="button legal-button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
+            <a class="button legal-button" href="https://misterg-blip.github.io/docs/Impressum.html">Impressum</a>
+        </div>
     </div>
 
-    <!-- Andere Buttons in einer Reihe -->
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 30px;">
-        <a class="button" href="https://play.google.com/store/apps/dev?id=5394028000260806774&hl=de" target="_blank">Play Store</a>     
-        <a class="button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
-        <a class="button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
-        <a class="button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
-        <a class="button" href="https://lostsoldier.carrd.co/" target="_blank">Project: Lost Soldier</a>
-        <a class="button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
-        <a class="button" href="https://misterg-blip.github.io/portal.html">Browser Games</a>
-        <a class="button" href="./Datenschutzerklaerung_fuer_ReDate.pdf" target="_blank">Datenschutzerklärung</a>
-    </div>
-
-    <!-- Impressum Button -->
-    <div>
-        <a class="button" href="https://misterg-blip.github.io/support" style="
-            font-size: 0.9em;
-            background: #444;
-            color: #fff;
-            box-shadow: none;"
-        >Want to support me?</a>
-        <a class="button" href="https://misterg-blip.github.io/docs/Impressum.html" style="
-            font-size: 0.9em;
-            background: #444;
-            color: #fff;
-            box-shadow: none;
-        ">Impressum</a>
-    </div>
-</div>
-
-    </div>
-    <footer>© 2026 MisterG</footer>
+    <footer>© 2026 Mister G</footer>
 </body>
 </html>
