Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
         <!-- Social Media -->
         <div class="button-row">
             <a class="button social-button" href="https://play.google.com/store/apps/dev?id=5394028000260806774&hl=de" target="_blank">Play Store</a>     
-            <a class="button social-button" href="https://www.instagram.com/project_lost_soldier/" target="_blank">Instagram</a>
-            <a class="button social-button" href="https://www.youtube.com/@project_lost_soldier" target="_blank">YouTube</a>
-            <a class="button social-button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>        
+            <a class="button social-button" href="https://www.instagram.com/mister_g_apps/" target="_blank">Instagram</a>
+            <a class="button social-button" href="https://www.youtube.com/results?search_query=mister_g_apps" target="_blank">YouTube</a>
+            <a class="button social-button" href="https://www.tiktok.com/@gnnrgrsdrf" target="_blank">TikTok</a>
+            <a class="button social-button" href="https://www.twitch.tv/mister_g_apps" target="_blank">Twitch</a>
         </div>
 
         <!-- Games / Portale -->
