--- a/LS_portal.html
+++ b/LS_portal.html
@@ -411,7 +411,7 @@
                 <!-- Stillness -->
                 <a href="./stillness/index.html" class="game-card">
                     <div style="position: relative;">
-                        <img src="cabin_out.jpg" alt="LS: Stillness" class="game-preview">
+                        <img src="assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
                         <div class="restricted-badge">KEINE FREIGABE</div>
                     </div>
                     <div class="game-content">
