Revise support text and update donation link
Updated donation link and removed extra text from support section.

--- a/support.html
+++ b/support.html
@@ -76,12 +76,10 @@
 </head>
 <body>
     <h1>Unterstütze Mister G</h1>
-    <p>Wenn dir meine Spiele und Projekte gefallen, kannst du hier unkompliziert etwas Unterstützung geben. Alles freiwillig, nichts aufdringlich.</p>
+    <p>Wenn dir meine Spiele und Projekte gefallen, kannst du hier unkompliziert etwas Unterstützung geben.</p>
 
     <div class="button-container">
-        <a class="button" href="https://www.paypal.com/donate?hosted_button_id=DEINE_ID" target="_blank">Donations</a>
-        <a class="button" href="https://misterg-blip.github.io/advertising.html" target="_blank">Werbung gucken</a>
-        <a class="button disabled" href="#">Affiliate (irgendwann verfügbar)</a>
+        <a class="button" href="https://www.paypal.com/donate/?hosted_button_id=7CC26KN7JRP4A" target="_blank">Donations</a>    
     </div>
 
     <div class="footer-links">
