Revise support message for donations
Updated support message to encourage donations and explain their impact.

--- a/support.html
+++ b/support.html
@@ -76,7 +76,9 @@
 </head>
 <body>
     <h1>Unterstütze Mister G</h1>
-    <p>Wenn dir meine Spiele und Projekte gefallen, kannst du hier unkompliziert etwas Unterstützung geben.</p>
+    <p>Dir gefallen die Spiele und Projekte? - JA!?!<br><br>
+        Du kannst hier unkompliziert etwas Unterstützung geben.<br>
+        Jeder Beitrag hilft, neue Levels, Features und Storys zu entwickeln. Sie finanziert Hardware Software & Toolsum die kreativen Ideen umzusetzen.“</p>
 
     <div class="button-container">
         <a class="button" href="https://www.paypal.com/donate/?hosted_button_id=7CC26KN7JRP4A" target="_blank">Donations</a>    
