--- a/LS_portal.html
+++ b/LS_portal.html
@@ -409,11 +409,8 @@
         <section class="game-section">
             <div class="game-grid">
                 <!-- Stillness -->
-                <a href="./stillness/index.html" class="game-card">
-                    <div style="position: relative;">
-                        <img src="assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
-                        <div class="restricted-badge">KEINE FREIGABE</div>
-                    </div>
+                <a href="./stillness/stillness.html" class="game-card">
+                    <img src="stillness/assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
                     <div class="game-content">
                         <div class="game-number">MISSION 01</div>
                         <h2 class="game-title">Stillness</h2>
