--- a/LS_portal.html
+++ b/LS_portal.html
@@ -409,8 +409,11 @@
         <section class="game-section">
             <div class="game-grid">
                 <!-- Stillness -->
-                <a href="./stillness/stillness.html" class="game-card">
-                    <img src="stillness/assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
+                <a href="./LS_Stillness/stillness.html" class="game-card">
+                    <div style="position: relative;">
+                        <img src="LS_Stillness/assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
+                        <div class="restricted-badge">KEINE FREIGABE</div>
+                    </div>
                     <div class="game-content">
                         <div class="game-number">MISSION 01</div>
                         <h2 class="game-title">Stillness</h2>
