Update itch.io link in index.html

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <!-- Games / Portale -->
         <div class="button-row">
             <a class="button game-button" href="https://misterg-blip.github.io/LS_portal.html">Lost Soldier Universe</a>
-            <a class="button game-button" href="https://mister-g-249.itch.io/lost-soldier-foxhunt" target="_blank">itch.io</a>
+            <a class="button game-button" href="https://miste-g-apps.itch.io/" target="_blank">itch.io</a>
             <a class="button game-button" href="https://misterg-blip.github.io/portal.html">Browser Games</a>
         </div>
 
