--- a/portal.html
+++ b/portal.html
@@ -100,7 +100,7 @@
         <p>Wähle ein Spiel aus und starte direkt im Browser. Neue Spiele --- Work in Progress.</p>
 
         <div class="game-grid">
-            <a class="button" href="./runners/index.html" target="_blank">Runner</a>          
+            <a class="button" href="./runners/index.html" target="_blank">Cube Runner</a>          
             <!-- Weitere Spiele hier hinzufügen -->
         </div>
 
