--- a/LS_portal.html
+++ b/LS_portal.html
@@ -412,7 +412,7 @@
                 <a href="./LS_Stillness/stillness.html" class="game-card">
                     <img src="LS_Stillness/assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
                     <div class="game-content">
-                        <div class="game-number">MISSION 01</div>
+                        <div class="game-number">Episode 01</div>
                         <h2 class="game-title">Stillness</h2>
                         <p class="game-desc">
                             Verloren im Wald. Entscheidungen unter Zeitdruck. 
@@ -432,7 +432,7 @@
                         <span class="placeholder-icon">🦊</span>
                     </div>
                     <div class="game-content">
-                        <div class="game-number">MISSION 02</div>
+                        <div class="game-number">Episode 02</div>
                         <h2 class="game-title">Run</h2>
                         <p class="game-desc">
                             Der Fuchs flieht durch die Ruinen. Endless Runner durch 
