Replace Runner section with Dead Air game details

--- a/LS_portal.html
+++ b/LS_portal.html
@@ -426,22 +426,26 @@
                     </div>
                 </a>
 
-                <!-- Runner -->
-                <a href="./runners/index.html" class="game-card">
-                    <div class="preview-placeholder">
-                        <span class="placeholder-icon">🦊</span>
-                    </div>
+                <!-- Dead Air --> <!-- In Anfang einfügen: href="./LS_DeadAir/index.html" -->
+                <a  class="game-card">
+                     <video class="game-preview"
+                       src="LS_DeadAir/assets/video/controlroom_loop.mp4"
+                       autoplay
+                       muted
+                       loop
+                       playsinline>
+                    </video>
                     <div class="game-content">
                         <div class="game-number">Episode 02</div>
-                        <h2 class="game-title">Run</h2>
+                        <h2 class="game-title">Dead Air</h2>
                         <p class="game-desc">
-                            Der Fuchs flieht durch die Ruinen. Endless Runner durch 
-                            post-Vorfall Landschaft. Wie weit kommst du?
+                            Nachtschicht in der Leitstelle. Routine, Funkverkehr, Entscheidungen.
+                            Halte die Verbindung. Bring den Helikopter sicher zurück.
                         </p>
                         <div class="game-meta">
-                            <span class="meta-tag">Action</span>
-                            <span class="meta-tag">Endless</span>
-                            <span class="meta-tag">Highscore</span>
+                            <span class="meta-tag">Narrativ</span>
+                            <span class="meta-tag">10-15 Min</span>
+                            <span class="meta-tag">Entscheidungen</span>
                         </div>
                     </div>
                 </a>
