Refactor Dead Air game card with restricted badge

--- a/LS_portal.html
+++ b/LS_portal.html
@@ -427,28 +427,31 @@
                 </a>
 
                 <!-- Dead Air --> <!-- In Anfang einfügen: href="./LS_DeadAir/index.html" -->
-                <a  class="game-card">
-                     <video class="game-preview"
-                       src="LS_DeadAir/assets/video/Leitstelle.mp4"
-                       autoplay
-                       muted
-                       loop
-                       playsinline>
-                    </video>
-                    <div class="game-content">
-                        <div class="game-number">Episode 02</div>
-                        <h2 class="game-title">Dead Air</h2>
-                        <p class="game-desc">
-                            Nachtschicht in der Leitstelle. Routine, Funkverkehr, Entscheidungen.
-                            Halte die Verbindung. Bring den Helikopter sicher zurück.
-                        </p>
-                        <div class="game-meta">
-                            <span class="meta-tag">Narrativ</span>
-                            <span class="meta-tag">10-15 Min</span>
-                            <span class="meta-tag">Entscheidungen</span>
-                        </div>
-                    </div>
-                </a>
+               <a class="game-card">
+    <div style="position: relative;">
+        <video class="game-preview"
+           src="LS_DeadAir/assets/video/Leitstelle.mp4"
+           autoplay
+           muted
+           loop
+           playsinline>
+        </video>
+        <div class="restricted-badge">KEINE FREIGABE</div>
+    </div>
+    <div class="game-content">
+        <div class="game-number">Episode 02</div>
+        <h2 class="game-title">Dead Air</h2>
+        <p class="game-desc">
+            Nachtschicht in der Leitstelle. Routine, Funkverkehr, Entscheidungen.
+            Halte die Verbindung. Bring den Helikopter sicher zurück.
+        </p>
+        <div class="game-meta">
+            <span class="meta-tag">Narrativ</span>
+            <span class="meta-tag">10-15 Min</span>
+            <span class="meta-tag">Entscheidungen</span>
+        </div>
+    </div>
+</a>
             </div>
         </section>
 
