--- a/portal.html
+++ b/portal.html
@@ -3,113 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mister G – Games</title>
-    <style>
-        body {
-            font-family: "Segoe UI", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            color: #E0E0E0;
-            background-color: #111;
-            background: radial-gradient(circle at top, #222 0%, #000 80%);
-        }
-
-        .top-logo {
-            position: fixed;
-            top: 30px;
-            right: 30px;
-            width: 150px;
-            height: auto;
-            z-index: 1000;
-            filter: drop-shadow(0 0 10px #ffcc00);
-            transition: transform 0.3s;
-        }
-
-        .top-logo:hover {
-            transform: scale(1.1);
-        }
-
-        .overlay {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 40px 20px;
-            text-align: center;
-        }
-
-        h1 {
-            color: #ffcc00;
-            text-shadow: 0 0 15px #ffcc00;
-            margin-bottom: 15px;
-            font-size: 2.2em;
-        }
-
-        p {
-            max-width: 600px;
-            margin-bottom: 30px;
-            line-height: 1.6;
-            color: #ccc;
-        }
-
-        .game-grid {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-bottom: 30px;
-        }
-
-        a.button {
-            display: inline-block;
-            min-width: 180px;
-            padding: 16px 24px;
-            margin: 5px;
-            background: linear-gradient(90deg, #ffcc00, #ff9900);
-            color: #000;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            font-size: 1.1em;
-            text-align: center;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 12px rgba(255, 204, 0, 0.5);
-        }
-
-        a.button:hover {
-            transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 0 18px rgba(255, 204, 0, 0.8);
-        }
-
-        footer {
-            position: absolute;
-            bottom: 15px;
-            width: 100%;
-            text-align: center;
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+    <title>Mister G – Game Portal</title>
+    
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+    
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles/shared-portal-styles.css">
+    <link rel="stylesheet" href="styles/portal-specific.css">
 </head>
 <body>
-    <img src="fuchs-logo.png" alt="Logo" class="top-logo">
+    <!-- Tab Navigation -->
+    <nav class="tab-navigation">
+        <a href="portal.html" class="tab-link active">All Games</a>
+        <a href="LS_portal.html" class="tab-link">Lost Soldier</a>
+    </nav>
 
-    <div class="overlay">
-        <h1>Mister G – Games</h1>
-        <p>Wähle ein Spiel aus und starte direkt im Browser. Neue Spiele --- Work in Progress.</p>
+    <img src="fuchs-logo.png" alt="Mister G" class="studio-logo">
 
-        <div class="game-grid">
-            <a class="button" href="./runners/index.html" target="_blank">Cube Runner</a>          
-            <!-- Weitere Spiele hier hinzufügen -->
-        </div>
+    <div class="container">
+        <header>
+            <h1 class="main-title">Mister G – Game Portal</h1>
+            <p class="tagline">Experimentelle Narrativ-Spiele und interaktive Geschichten</p>
+        </header>
 
-        <div class="footer-links">
-            <a class="button" href="https://misterg-blip.github.io/support">Want to support me?</a>
-            <a class="button" href="https://misterg-blip.github.io/">Home</a>
-        </div>        
+        <section class="game-section">
+            <div class="game-grid">
+                <!-- LS: Stillness -->
+                <a href="./LS_Stillness/stillness.html" class="game-card">
+                    <img src="LS_Stillness/assets/images/cabin_out.jpg" alt="LS: Stillness" class="game-preview">
+                    <div class="game-content">
+                        <h2 class="game-title">LS: Stillness</h2>
+                    </div>
+                </a>
+
+                <!-- LS: Dead Air -->
+                <a href="#" class="game-card">
+                    <div style="position: relative;">
+                        <img src="LS_DeadAir/assets/images/Leitstelle.jpg" alt="LS: Dead Air" class="game-preview">
+                        <div class="restricted-badge">KEINE FREIGABE</div>
+                    </div>
+                    <div class="game-content">
+                        <h2 class="game-title">LS: Dead Air</h2>
+                    </div>
+                </a>
+
+                <!-- Cube Runner -->
+                <a href="./runners/index.html" class="game-card">
+                    <img src="runners/Logo2.png" alt="Cube Runner" class="game-preview">
+                    <div class="game-content">
+                        <h2 class="game-title">Cube Runner</h2>
+                    </div>
+                </a>
+
+                <!-- Placeholder Cards -->
+                <a href="#" class="game-card">
+                    <div class="preview-placeholder">
+                        <span class="placeholder-icon">🎮</span>
+                    </div>
+                    <div class="game-content">
+                        <h2 class="game-title">In Produktion</h2>
+                    </div>
+                </a>
+
+                <a href="#" class="game-card">
+                    <div class="preview-placeholder">
+                        <span class="placeholder-icon">🎮</span>
+                    </div>
+                    <div class="game-content">
+                        <h2 class="game-title">In Planung</h2>
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <nav class="footer-nav">
+            <div class="nav-links">
+                <a href="https://misterg-blip.github.io/support" class="nav-link">Support</a>
+                <a href="https://misterg-blip.github.io/" class="nav-link">Home</a>
+            </div>
+            <footer>© 2026 MISTER G</footer>
+        </nav>
     </div>
-
-    <footer>© 2026 MisterG</footer>
 </body>
 </html>
